--- a/src/EntityFramework.Samples.Web/EntityFramework.Samples.Web.csproj
+++ b/src/EntityFramework.Samples.Web/EntityFramework.Samples.Web.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -7,10 +7,15 @@
     <UserSecretsId>33e02858-dafc-4698-9dea-3dd4959039d2</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
+    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EntityFramework.Samples.DB\EntityFramework.Samples.DB.csproj" />
   </ItemGroup>
 
 </Project>
